--- a/app.json
+++ b/app.json
@@ -1,29 +1,34 @@
 {
-  "pages":[
+  "pages": [
     "pages/index/index",
     "pages/join/join",
-    "pages/detail/detail",
-    "pages/logs/logs"
-  ],
-  "window":{
-    "backgroundTextStyle":"light",
-    "navigationBarBackgroundColor": "#2e5e86",
-    "navigationBarTitleText": "信贷DEMO",
-    "navigationBarTextStyle":"white"
+    "pages/selectcity/selectcity"
+    ],
+  "window": {
+    "navigationBarBackgroundColor": "#ffffff",
+    "navigationBarTextStyle": "black",
+    "navigationBarTitleText": "无忧入职",
+    "backgroundColor": "#f7f7f7",
+    "backgroundTextStyle": "light",
+    "enablePullDownRefresh": false
   },
   "tabBar": {
-    "selectedColor": "#2e5e86",
-    "list": [{
-      "pagePath": "pages/index/index",
-      "text": "首页",
-      "iconPath": "images/ic_home_normal.png",
-      "selectedIconPath": "images/ic_home_pressed.png"
-    },
-    {
-      "pagePath": "pages/join/join",
-      "text": "加入",
-      "iconPath": "images/ic_join_normal.png",
-      "selectedIconPath": "images/ic_join_pressed.png"
-    }]
+    "color": "#b2b2b2",
+    "selectedColor": "#2fcc85",
+    "backgroundColor": "#ffffff",
+    "list": [
+      {
+        "pagePath": "pages/index/index",
+        "text": "职位",
+        "iconPath": "images/task_unselected.png",
+        "selectedIconPath": "images/task_selected.png"
+      },
+      {
+        "pagePath": "pages/join/join",
+        "text": "入职",
+        "iconPath": "images/add_unselected.png",
+        "selectedIconPath": "images/add_selected.png"
+      }
+    ]
   }
 }
