工作经历模块  数组维护数据
工作经历模块  数组维护数据

--- a/app.json
+++ b/app.json
@@ -2,8 +2,9 @@
   "pages": [
     "pages/index/index",
     "pages/join/join",
-    "pages/selectcity/selectcity"
-    ],
+    "pages/jobIntention/jobIntention",
+    "pages/workExper/workExper"
+  ],
   "window": {
     "navigationBarBackgroundColor": "#ffffff",
     "navigationBarTextStyle": "black",
