专业技能模块
专业技能模块

--- a/app.json
+++ b/app.json
@@ -2,6 +2,7 @@
   "pages": [
     "pages/join/join",
     "pages/jobIntention/jobIntention",
+    "pages/professionSkill/professionSkill",        
     "pages/workExper/workExper",
     "pages/educateCerti/educateCerti",        
     "pages/info/info"
